# StreamVorti

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  INSTALL-SPACK-MFEM.md  INSTALL_SETONIX.md  Makefile  README.md  TODO.md  dev.cpp  main.cpp  mfem_main.cpp  ocicl.csv  spacetime_navier_stokes.cpp  spack.yaml  streamvorti.cpp  streamvorti_par.cpp
.github/workflows/: build-from-source-with-ecl.yml  build-from-source-with-gmsh.yml  build-from-source.yml  build-spack.yml  build-with-ecl.yml  build-with-mfem-4.9.yml  build-with-spack.yml  build.yml  run-examples-parallel.yml  run-examples.yml  test-cpp.yml  test-lisp.yml  test-validation.yml
_reference/: README.md
cmake/: CMakeLists_HPC.cmake  CMakeLists_local.cmake
cmake/modules/: FindMFEM.cmake
data/: erturk_2005_u.txt  ghia_1982_u.txt  ghia_1982_v.txt  turek_1996_dfg_re20.txt
demo/: backward-step.lisp  cavity-fdm.lisp  cavity-quick.lisp  cavity-re1000.lisp  cavity-regularized.lisp  cavity.lisp  channel.lisp  compare.m  cylinder.lisp  double-lid-cavity.lisp  mfem.ini  mfem_cube1x1x1.mesh  mfem_square10x10.mesh  paraview_boundary_normals.py  paraview_velocity_glyphs.py  poiseuille.lisp  square10x10.ini  square10x10.inp  st_cavity.lisp  st_channel.lisp  st_cylinder.lisp  von-karman.lisp
demo/meshes/: cavity_quad.mesh  cylinder_in_channel.geo  cylinder_in_channel_hex.geo
doc/: CMakeLists.txt  boundary-conditions.md  finite-differences.md  streamvorti_doxyfile.in
doc/adrs/: 0001-simulation-definition-language.md  0002-parallel-mpi-dcpse.md  0003-finite-differences.md  0003-gmsh-cl-integration.md  0004-asdf-in-embedded-ecl.md
docs/: PARALLEL_DESIGN.md  PARALLEL_RESULTS.md
include/StreamVorti/: derivative_operator.hpp  mfem_main.hpp  stream_vorti.hpp  streamvorti.hpp  streamvorti_par.hpp  timer_output.hpp
include/StreamVorti/approximants/: dcpse.hpp  dcpse_2d.hpp  dcpse_3d.hpp  par_dcpse.hpp  par_dcpse_2d.hpp
include/StreamVorti/conditions/: conditions.hpp  conditions_handler.hpp  dirichlet.hpp  ebciem.hpp  load_curve.hpp  loading.hpp
include/StreamVorti/elements/: element_properties.hpp  elements.hpp  node.hpp  tetrahedron.hpp
include/StreamVorti/exporters/: exporters.hpp  paraview_exporter.hpp
include/StreamVorti/finite_differences/: fd.hpp  fd_2d.hpp  fd_3d.hpp  par_fd.hpp  par_fd_2d.hpp
include/StreamVorti/grid/: grid.hpp  grid_2d.hpp  grid_3d.hpp  grids.hpp
include/StreamVorti/lisp/: ecl_runtime.hpp  lisp_bridge.hpp  lisp_dcpse.hpp  lisp_loader.hpp  lisp_mesh.hpp
include/StreamVorti/materials/: materials.hpp  neo_hookean.hpp
include/StreamVorti/mesh/: mesh.hpp  mesh_properties.hpp  tetramesh.hpp
include/StreamVorti/mesh_io/: abaqus_io.hpp  abaqus_io.tpp  febio_io.hpp  mesh_io.hpp
include/StreamVorti/models/: models.hpp  strong_model_2d.hpp
include/StreamVorti/options_configuration/: config_manager.hpp  config_manager.tpp
include/StreamVorti/sets/: node_set.hpp  sets.hpp
include/StreamVorti/solvers/: dyn_relax_prop.hpp  mtled.hpp  solvers.hpp
include/StreamVorti/spacetime/: st_config.hpp  st_integrators.hpp  st_mesh.hpp  st_solver.hpp
include/StreamVorti/support_domain/: par_support_domain.hpp  support_domain.hpp
include/StreamVorti/utilities/: logger.hpp  timer.hpp  utilities.hpp
include/StreamVorti/vectors/: vec3.hpp  vec3.tpp  vectors.hpp
lisp/: boundaries.lisp  compare-dfg.lisp  compare-ghia.lisp  compare-poiseuille.lisp  cpp-bridge.lisp  geometry.lisp  gmsh-init.lisp  mesh.lisp  packages.lisp  plot-sparsity.lisp  run-tests.lisp  sdl-macros.lisp  sdl.lisp  simulation.lisp  test-compare-ghia.lisp  test-gmsh.lisp  test-sdl.lisp  validate-all.lisp
scripts/: macos-build-mfem-with-metis.sh  rebuild-mfem-with-metis.sh  run-demos.sh  run-lisp-tests.sh  run-lisp-tests.sh.old
scripts/build-from-source/: 01-install-system-dependencies-ecl.sh  01-install-system-dependencies-gmsh.sh  01-install-system-dependencies.sh  02-setup-ccache.sh  03-build-hypre.sh  04-build-metis.sh  05-build-mfem.sh  06-build-streamvorti-ecl.sh  06-build-streamvorti-gmsh.sh  06-build-streamvorti.sh  07-run-ctest.sh  08-check-built-artifacts.sh  09-run-example-tests-parallel.sh  09-run-example-tests.sh  10-generate-coverage.sh  11-install-gtest.sh  12-build-gmsh.sh
scripts/build-with-spack/: 01-install-spack-prerequisites.sh  02-install-spack.sh  03-configure-spack.sh  04-create-spack-environment.sh  05-show-spack-environment.sh  06-inspect-mfem-installation.sh  07-build-streamvorti.sh  08-run-ctest.sh  09-check-built-artifacts.sh  10-run-example-tests.sh  setonix-packages.yaml  setonix-remove-spack-package-versions.py
src/approximants/: CMakeLists.txt  dcpse.cpp  dcpse_2d.cpp  dcpse_3d.cpp  par_dcpse.cpp  par_dcpse_2d.cpp
src/conditions/: CMakeLists.txt  conditions_handler.cpp  dirichlet.cpp  ebciem.cpp  load_curve.cpp  loading.cpp
src/elements/: CMakeLists.txt  node.cpp  tetrahedron.cpp
src/exporters/: CMakeLists.txt  paraview_exporter.cpp
src/finite_differences/: CMakeLists.txt  fd.cpp  fd_2d.cpp  fd_3d.cpp  par_fd.cpp  par_fd_2d.cpp
src/grid/: CMakeLists.txt  grid.cpp  grid_2d.cpp  grid_3d.cpp
src/lisp/: CMakeLists.txt  ecl_runtime.cpp  lisp_bridge.cpp  lisp_dcpse.cpp  lisp_loader.cpp  lisp_mesh.cpp
src/materials/: CMakeLists.txt  neo_hookean.cpp
src/mesh/: CMakeLists.txt  tetramesh.cpp
src/mesh_io/: CMakeLists.txt  abaqus_io.cpp  febio_io.cpp
src/models/: CMakeLists.txt  strong_model_2d.cpp
src/options_configuration/: CMakeLists.txt  config_manager.cpp
src/sets/: CMakeLists.txt  node_set.cpp
src/solvers/: CMakeLists.txt  dyn_relax_prop.cpp  mtled.cpp
src/spacetime/: CMakeLists.txt  st_integrators.cpp  st_mesh.cpp  st_solver.cpp
src/support_domain/: CMakeLists.txt  par_support_domain.cpp  support_domain.cpp
src/utilities/: CMakeLists.txt  timer.cpp
src/vectors/: CMakeLists.txt
tests/: CMakeLists.txt  test_ecl_runtime.cpp  test_finite_differences.cpp  test_lisp_bridge.cpp  test_lisp_dcpse.cpp  test_lisp_mesh.cpp  test_main.cpp  test_sdl_loader.cpp
